<resources>


    <string name="app_dominio">vimeti.smeag.online</string>
    <string name="title_activity_principal">Main</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Ventas</string>
    <string name="title_notifications">Balance</string>
    <string name="title_reportes">Reportes</string>
    <string name="title_mvirtual">Mesero virtual</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">CustomerCentric</string>

    <!--  API URL'S -->
    <string name="Ambiente">Developer</string>

    <!--  PROD-->
    <string-array name="Poduccion">
        <item>http://100.24.60.53:5000/</item>
    </string-array>

    <!--  DEV-->
    <string-array name="Developer">
        <item>http://100.24.60.53:5000/</item> <!-- URL Athentication result user whit token  -->
    </string-array>

    <!--  QA-->
    <string-array name="qa">
        <item>http://100.24.60.53:5000/</item>
    </string-array>

    <!--  Sort values Search byname-->
    <string-array name="sort_options_array">
        <item>A-Z</item>
        <item>Z-A</item>
    </string-array>

    <!--  Values Serach by document -->
    <array name="documents_options_array">
        <item>CC - Cédula de Ciudadania</item>
        <item>TI - Tarjeta de Identitdad</item>
        <item>CDI - Carné Diplomatico</item>
        <item>CE - Cédula de Extranjeria</item>
        <item>CPA - Cédula Países Andinos</item>
        <item>NIT - CPA</item>
        <item>PAS - Pasaporte</item>
        <item>RCN - Registro Civil</item>
        <item>RUT - Registro Único Tributario</item>
        <item>TE - Terceros del Exterior sin Domicilio</item>
    </array>

    <!--  Values Menu Clients info -->
    <string-array name="menu_client_options_array">
        <item>Datos Básicos</item>
        <item>Ofertas y Alertas</item>
        <item>Centrales de riesgo</item>
        <item>Historial Préstamos</item>
        <item>Cupo Rotativo</item>
        <item>Pasivos</item>
        <item>Historia Contactos</item>
        <item>PQR</item>
    </string-array>

    <!--Commoms Buttons-->
    <string name="search">Consultar</string>
    <string name="clean">Limpiar</string>
    <!--commons Labels-->
    <string name="numerodedocumento">Numero de Documento</string>
    <string name="correoelectronico">correo</string>
    <string name="correohint">mi_correo@dominio.com</string>
    <string name="tipodedocumento">Tipo de Documento</string>
    <string name="ej_1_345_432455">Ej: 1.345.432455</string>
    <!--commons imagedescriptions-->
    <string name="image_description_logo">image logo</string>
    <string name="image_description_home">home image icon</string>
    <string name="image_description_information">information image icon</string>
    <string name="image_description_logout">logout image icon</string>
    <string name="image_description_menu_drawler">menu image icon</string>
    <string name="image_description_sape_home">shape home</string>
    <!--  login-->
    <string name="holalogin">¡Hola!</string>
    <string name="escribe_tu_contrasena">Escribe tu contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="recoverypassword">Recupera tu contraseña aqui</string>
    <string name="createusertextnoaction">¿Aún no tienes usuario</string>
    <string name="createuser">Crea tu usuario</string>
    <string name="error_input_number_document">Debes ingresar un correo</string>
    <string name="error_input_paasswprd">Debes ingresar tu contraseña</string>
    <!-- login taosts -->
    <string name="Numero_documento_contraseña_inválidos">Numero documento y contraseña inválidos verifique</string>
    <string name="error_numero_documento_contraseña">Por favor, ingrese su numero de documento y contraseña</string>
    <string name="error_numerodocumento">"Por favor, ingrese su numero de documento</string>
    <string name="error_contraseña">Por favor, ingrese su contraseña</string>
    <!-- Loading -->
    <string name="loadingmessage">Cargando…</string>
    <!--  Menu-->
    <string name="bienvenido_a_mi_banco">Bienvenidos a MiBanco</string>
    <string name="hola">Hola, User Name </string>
    <!--  Menu Items-->
    <string name="inicio">Inicio</string>
    <string name="tubiblioteca">Tu Biblioteca</string>
    <string name="title_activity_mainmenu">mainmenu</string>
    <!--  Menu Clients-->
    <string name="menunametitleclient">Nombre CLiente</string>
    <string name="menuphonetitleclient">Teléfono Negocio: </string>
    <string name="menuphonelabelclient">301 531 3651 </string>
    <!-- Home Fragment -->

    <string name="history">Ultimo visitado</string>
    <string name="history_body">Ficha Integral de Cliente - FIC</string>
    <string name="news">Noticias y eventos</string>
    <string name="news_body">Mantente al día con todos los eventos que realizamos en MiBanco para que hagas parte de ellos y participes.</string>
    <string name="news_messagin">Sostenibilidad</string>
    <string name="news_messagin_body">Conoce como en Mi Banco desarrollamos nuestra política de sostenibilidad.</string>
    <!-- Library fragment-->
    <string name="fic">Ficha Integral de Cliente - FIC</string>
    <!-- search fragment-->
    <string name="serach_button_hint">Has tu busqueda</string>
    <!-- error search fragment-->
    <string name="title_error">¡Disculpanos! \n No encontramos lo que buscas</string>
    <string name="body_error">Parece que hubo un error con tu búsqueda o \n el accesp que buscas no existe, ¿Quieres \n intentarlo de nuevo?</string>
    <string name="button_error">Intentar de nuevo</string>
    <!-- titles -->
    <string name="tittle_fic">FICHA INTEGRAL DEL CLIENTE</string>
    <!--search by id -->
    <string name="body_serach_1">Encuentra clientes buscando por Nombres y Apellidos o Razón Social.</string>
    <string name="title_search_box1">Nombres o Razón Social</string>
    <string name="error_empty_text">Debes ingresar una búsqueda</string>
    <!--search by id name-->
    <string name="step_one">1. Escoge el tipo de documento del cliente </string>
    <string name="step_two">2. Busca el número del documento del cliente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_drawe_navigation">DraweNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>