<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgray"
    >

    <ImageView
        android:id="@+id/image_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/error_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_textview_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/hvdtrial_brevia_medium"
        android:text="@string/title_error"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_error" />

    <TextView
        android:id="@+id/body_textview_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/hvdtrial_brevia_regular"
        android:text="@string/body_error"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textview_error" />

    <Button
        android:id="@+id/button_try_again"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/button_error"
        android:textSize="16sp"
        android:fontFamily="@font/hvdtrial_brevia_medium"
        app:layout_constraintTop_toBottomOf="@+id/body_textview_error"
        tools:layout_editor_absoluteX="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>